--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:text="This is your score"
         android:textSize="30dp"
         android:gravity="center_horizontal"
+        android:layout_marginTop="5dp"
         />
 
 
