--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/holderLayout"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:windowActionBar="false"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
@@ -13,23 +12,15 @@
         android:id="@+id/scoreTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is your score"
-        android:textSize="30dp"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        />
+        android:text="0"
+        android:textSize="50dp"
+        android:gravity="center"
+        android:layout_gravity= "center"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 
-    <RelativeLayout
-        android:id="@+id/mainLayout"
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-
-
-    </RelativeLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
