--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/white"
+    >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scoreTextView"
+        android:textSize="40dp"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"
+        android:layout_gravity= "center"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold" />
+
+
+<RelativeLayout
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:windowActionBar="false"
-    tools:context=".MainActivity">
+    android:background="@color/white"
+    tools:context=".MainActivity"
+    android:layout_marginBottom="5dp">
 
 
     <TextView
-        android:id="@+id/scoreTextView"
-        android:layout_width="match_parent"
+        android:id="@+id/initialTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
         android:textSize="50dp"
         android:gravity="center"
         android:layout_gravity= "center"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+         />
 
 
 
 
 </RelativeLayout>
+</LinearLayout>
