--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,6 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/white"
+    android:id="@+id/menuLayout"
     tools:context="edinburgh.games.johnmichaelhenderson.testdots.MenuActivity">
 
 
