--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -3,19 +3,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/white"
+    android:id="@+id/resultLayout"
     tools:context="edinburgh.games.johnmichaelhenderson.testdots.ResultActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/showScoresLayout">
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
+        android:text="You Scored"
         android:id="@+id/displayScoreTV"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="43dp" />
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
+        android:textSize="40dp"
+        android:textStyle="bold"
+         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="88"
+        android:id="@+id/displayScoreTV1"
+        android:textSize="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:textStyle="bold"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Your Highscore"
+        android:id="@+id/displayBestScoreTV"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
+        android:textSize="40dp"
+        android:textStyle="bold"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="88"
+        android:id="@+id/displayBestScoreTV1"
+        android:textSize="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:textStyle="bold"
+        />
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/restartGameBt"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/howtoplaybutton"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Restart Game"
+        android:textColor="#FFFFFF"
+        android:layout_below="@+id/showScoresLayout"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/homeBt"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/startgamebutton"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Home"
+        android:textColor="#FFFFFF"
+        android:layout_below="@+id/showScoresLayout"
+        android:layout_toLeftOf="@+id/restartGameBt"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/leaderboard1Bt"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/leaderboardbutton"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Leader Board"
+        android:textColor="#FFFFFF"
+        android:layout_below="@+id/showScoresLayout"
+        android:layout_toRightOf="@+id/restartGameBt"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true" />
+
+
 </RelativeLayout>
