How to play added, still bugs to fix. About to change how buttons are created

--- a/app/src/main/res/drawable/killedbackground.xml
+++ b/app/src/main/res/drawable/killedbackground.xml
@@ -4,7 +4,7 @@
         android:radius="14dp"
         />
     <solid
-        android:color="#181BD9"
+        android:color="#BF0000"
         />
     <padding
         android:left="0dp"
