--- a/app/src/main/res/layout/activity_how_to_play.xml
+++ b/app/src/main/res/layout/activity_how_to_play.xml
@@ -4,13 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/helpLayout"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/white"
     tools:context="edinburgh.games.johnmichaelhenderson.testdots.HowToPlayActivity"
-    android:layout_marginLeft="6dp"
-    android:layout_marginRight="6dp">
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -21,7 +18,11 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
+        android:textColor="#60000000"
 
         />
 
@@ -33,6 +34,7 @@
         android:width="80dp"
         android:height="80dp"
         android:textSize="25dp"
+        android:layout_marginLeft="20dp"
         android:textColor="@color/white"
         android:layout_below="@+id/helpScoreTV"
         android:layout_alignParentLeft="true"
@@ -47,10 +49,12 @@
         android:text=""
         android:id="@+id/helpInstruction2TV"
         android:textSize="20dp"
+        android:textColor="#60000000"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
         android:layout_marginBottom="20dp"/>
 
     <Button
@@ -65,42 +69,20 @@
         android:layout_marginLeft="5dp"
         android:textSize="25dp"
         android:height="80dp"
+        android:layout_marginRight="20dp"
         android:textColor="@color/white"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:id="@+id/helpButton3"
+        android:id="@+id/continueButton"
         android:width="80dp"
-        android:layout_below="@+id/helpButton1"
-        android:layout_centerHorizontal="true"
         android:textSize="25dp"
         android:height="80dp"
-        android:textColor="@color/white"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/helpButton4"
-        android:layout_below="@+id/helpButton2"
-        android:textSize="25dp"
-        android:height="80dp"
-        android:width="80dp"
-        android:textColor="@color/white" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/helpButton5"
-        android:layout_below="@+id/helpButton4"
-        android:layout_centerHorizontal="true"
-        android:textSize="25dp"
-        android:height="80dp"
-        android:width="80dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:layout_alignBottom="@+id/helpButton2"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
