Working on google play services

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -56,4 +56,30 @@
         android:layout_below="@+id/banner"
         android:layout_toRightOf="@+id/howToPlayBt"
          />
+
+    <!-- sign-in button -->
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_below="@+id/howToPlayBt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:clickable="false" />
+
+    <!-- sign-out button -->
+
+    <Button
+        android:id="@+id/sign_out_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign Out"
+        android:visibility="gone"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_below="@+id/howToPlayBt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        />
 </RelativeLayout>
